# app_dirs2

./: Cargo.toml  LICENSE.txt  README.md  appveyor.yml  rustfmt.toml  travis.yml
.github/workflows/: rust.yaml
examples/: android.rs
src/: common.rs  lib.rs  utils.rs
src/imp/: mod.rs
src/imp/platform/: android.rs  macos.rs  redox.rs  unix.rs  unknown.rs  windows.rs
tests/: fs.rs  unix.rs
