[package]
name = "app_dirs2"
version = "2.0.4"
authors = ["Andy Barron <AndrewLBarron@gmail.com>", "Simon Heath <icefoxen@gmail.com>"]

description = "Put your app's data in the right place on every platform -- maintained fork."
documentation = "https://docs.rs/app_dirs2"
repository = "https://github.com/app-dirs-rs/app_dirs2"
readme = "README.md"
keywords = ["application", "data", "storage", "location", "directory"]
license = "MIT"

[target.'cfg(all(unix, not(target_os="macos")))'.dependencies]
xdg = "^2.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["shlobj", "combaseapi"] }