[package]
name = "app_dirs2"
version = "2.3.3"
authors = ["Andy Barron <AndrewLBarron@gmail.com>", "Simon Heath <icefoxen@gmail.com>"]
categories = ["filesystem", "os"]
description = "Put your app's data in the right place on every platform. Community-maintained project."
documentation = "https://docs.rs/app_dirs2"
homepage = "https://lib.rs/app_dirs2"
keywords = ["application", "data", "storage", "location", "directory"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/app-dirs-rs/app_dirs2"
edition = "2018"

[target.'cfg(all(unix, not(target_os="macos")))'.dependencies]
xdg = "^2.0.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
ndk-glue = "0.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["shlobj", "combaseapi"] }

[dev-dependencies]
lazy_static = "1.4"
tempfile = "3"
test-case = "1"
